--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "mistborn-dice-roller",
+  "homepage": "https://andercol4.github.io/mistborn_diceroller/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
