--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mistborn-dice-roller",
-  "homepage": "https://andercol4.github.io/mistborn_diceroller/",
+  "homepage": "https://andercol4.github.io/mistborn_diceroller",
   "private": true,
   "version": "0.0.0",
   "type": "module",
